--- a/static/style.css
+++ b/static/style.css
@@ -7,5 +7,10 @@ body {
 h1,h2,h3,h4,h5,h6,
 p {
     font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
+    font-weight: 200;
+}
+
+h1 {
+    color: green;
     font-weight: 300;
 }
