Add recipe GET and POST routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
     <nav>
     </nav>
     <main>
-        <h1>Greetings</h1>
-        <h2>Welcome {{name}}!</h2>
+        {% block content %}{% endblock %}
     </main>
 </body>
 </html>
