--- a/static/style.css
+++ b/static/style.css
@@ -4,8 +4,7 @@ body {
     width: 80%;
 }
 
-h1,h2,h3,h4,h5,h6,
-p {
+h1,h2,h3,h4,h5,h6,p,li,label,input,button {
     font-family: Helvetica Neue, Arial, Helvetica, sans-serif;
     font-weight: 200;
 }
